removed editable calendar

--- a/app/views/infrastructures/modal/_modal_manage_schedule.html.erb
+++ b/app/views/infrastructures/modal/_modal_manage_schedule.html.erb
@@ -44,29 +44,29 @@
             <span class="glyphicon glyphicon-question-sign"></span></a>
           </small></h4>
           <div class="form-group">
-            <label class="col-lg-2 control-label">Every:</label>
+            <label class="col-lg-2 control-label">Every: </label>
             <div class="col-lg-10">
               <div class="radio">
                 <label>
-                  <input type="radio" value="1" v-model="sel_instance.repeat_freq" name="sel_instance.repeat_freq" align="bottom">
+                  <input type="radio" value="1" v-model="sel_instance.repeat_freq" name="sel_instance.repeat_freq" align="bottom" exp="a">
                   Everyday
                 </label>
               </div>
               <div class="radio">
                 <label>
-                  <input type="radio" value="2"  v-model="sel_instance.repeat_freq" name="sel_instance.repeat_freq" align="bottom">
+                  <input type="radio" value="2"  v-model="sel_instance.repeat_freq" name="sel_instance.repeat_freq" align="bottom" exp="b">
                   Weekdays (Monday - Friday)
                 </label>
               </div>
               <div class="radio">
                 <label>
-                  <input type="radio" value="3"  v-model="sel_instance.repeat_freq" name="sel_instance.repeat_freq" align="bottom">
+                  <input type="radio" value="3" v-model="sel_instance.repeat_freq" name="sel_instance.repeat_freq" align="bottom" exp="c">
                   Weekends (Saturday & Sunday)
                 </label>
               </div>
               <div class="radio">
                 <label>
-                  <input type="radio" value="4" v-model="sel_instance.repeat_freq" name="sel_instance.repeat_freq" align="bottom">
+                  <input type="radio" value="4" v-model="sel_instance.repeat_freq" name="sel_instance.repeat_freq" align="bottom" exp="d">
                   Specific dates (other)
                 </label>
               </div>
