--- a/app/views/infrastructures/modal/_modal_manage_schedule.html.erb
+++ b/app/views/infrastructures/modal/_modal_manage_schedule.html.erb
@@ -46,35 +46,17 @@
           <div class="form-group">
             <label class="col-lg-2 control-label">Every: </label>
             <div class="col-lg-10">
-              <div class="radio">
+              <div class="radio" v-repeat="modes">
                 <label>
-                  <input type="radio" value="1" v-model="sel_instance.repeat_freq" name="sel_instance.repeat_freq" align="bottom" exp="a">
-                  Everyday
-                </label>
-              </div>
-              <div class="radio">
-                <label>
-                  <input type="radio" value="2"  v-model="sel_instance.repeat_freq" name="sel_instance.repeat_freq" align="bottom" exp="b">
-                  Weekdays (Monday - Friday)
-                </label>
-              </div>
-              <div class="radio">
-                <label>
-                  <input type="radio" value="3" v-model="sel_instance.repeat_freq" name="sel_instance.repeat_freq" align="bottom" exp="c">
-                  Weekends (Saturday & Sunday)
-                </label>
-              </div>
-              <div class="radio">
-                <label>
-                  <input type="radio" value="4" v-model="sel_instance.repeat_freq" name="sel_instance.repeat_freq" align="bottom" exp="d">
-                  Specific dates (other)
+                  <input type="radio" v-on="change: repeat_selector()" id="desc" v-model="sel_instance.repeat_freq" name="sel_instance.repeat_freq" align="bottom" value="{{value}}">
+                  {{desc}}
                 </label>
               </div>
             </div>
           </div>
           </div>
           <div class="col-lg-12">
-            <div class="col-sm-6" v-if="sel_instance.repeat_freq === '4'">
+            <div id="days-selector" class="col-sm-6" style="display: none">
               <div class="checkbox" v-repeat="d: dates">
                 <label><input v-attr="checked: d.checked" v-model="d.checked" type="checkbox"> {{d.day}}</label>
               </div>
