--- a/app/views/infrastructures/modal/_modal_manage_schedule.html.erb
+++ b/app/views/infrastructures/modal/_modal_manage_schedule.html.erb
@@ -3,11 +3,11 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h3 class="modal-title">Manage Schedule  <small>#{{sel_instance.physical_id}}</small></h3>
+        <h3 class="modal-title"><%= I18n.t('operation_scheduler.modal_title')%>  <small>#{{sel_instance.physical_id}}</small></h3>
       </div>
       <div class="modal-body">
         <div class="col-md-12">
-          <h4>Duration <small><a href="#" id="duration" v-on="click:pop('duration')"
+          <h4><%= I18n.t('operation_scheduler.duration')%> <small><a href="#" id="duration" v-on="click:pop('duration')"
             data-content="The duration of the instance to run. Depending in the specified start and end date."
             rel="popover" data-toggle="popover" data-trigger="focus"
             data-original-title="Duration"
@@ -18,14 +18,14 @@
           <div class="col-lg-12">
             <div class="row">
               <div class="col-md-6">
-                Start Date: <input type="text" v-datepicker="sel_instance.start_date" v-model="sel_instance.start_date"" class="form-control" id="op-sched">
+                <%= I18n.t('operation_scheduler.start_date')%> <input type="text" v-datepicker="sel_instance.start_date" v-model="sel_instance.start_date"" class="form-control" id="op-sched">
                 <button class="btn btn-default btn-sm" type="button" v-on="click: sel_instance.start_date = default_start">Default</button>
                 <span class="help-block">{{default_start}}</span>
               </div>
             </div>
             <div class="row">
               <div class="col-md-6">
-                End Date: <input type="text" v-datepicker="sel_instance.end_date" v-model="sel_instance.end_date" class="form-control" id="op-sched">
+                <%= I18n.t('operation_scheduler.end_date')%> <input type="text" v-datepicker="sel_instance.end_date" v-model="sel_instance.end_date" class="form-control" id="op-sched">
                 <button class="btn btn-default btn-sm" type="button" v-on="click: sel_instance.end_date = default_end">Default (+1 year)</button>
                 <span class="help-block">{{default_end}}</span>
               </div>
@@ -34,7 +34,7 @@
         </div>
         <div class="col-md-12">
           <hr>
-          <h4> Recurring <small><a href="#" id="recurring" v-on="click:pop('recurring')"
+          <h4> <%= I18n.t('operation_scheduler.recurring')%> <small><a href="#" id="recurring" v-on="click:pop('recurring')"
                                data-content="The time when the instance starts and stops depending on the selected options"
                                data-toggle="popover"
                                data-trigger="focus"
@@ -44,7 +44,7 @@
             <span class="glyphicon glyphicon-question-sign"></span></a>
           </small></h4>
           <div class="form-group">
-            <label class="col-lg-2 control-label">Every: </label>
+            <label class="col-lg-2 control-label"><%= I18n.t('operation_scheduler.every')%> </label>
             <div class="col-lg-10">
               <div class="radio" v-repeat="modes">
                 <label>
@@ -64,12 +64,12 @@
             <div class="form-group">
               <div class="row">
                 <div class="col-md-6">
-                  Start Time: <input v-timepicker="sel_instance.start_time" v-model="sel_instance.start_time" type="text" name="start-time" id="start-time" class="form-control"/>
+                  <%= I18n.t('operation_scheduler.start_time')%> <input v-timepicker="sel_instance.start_time" v-model="sel_instance.start_time" type="text" name="start-time" id="start-time" class="form-control"/>
                   <button class="btn btn-default btn-sm" type="button" v-on="click: sel_instance.start_time = time_start">Default</button>
                   <span class="help-block">{{time_start}}</span>
                 </div>
                 <div class="col-md-6">
-                  End Time: <input v-timepicker="sel_instance.end_time"  v-model="sel_instance.end_time" type="text" name="end-time" id="end-time" class="form-control"/>
+                  <%= I18n.t('operation_scheduler.end_time')%>: <input v-timepicker="sel_instance.end_time"  v-model="sel_instance.end_time" type="text" name="end-time" id="end-time" class="form-control"/>
                   <button class="btn btn-default btn-sm" type="button" v-on="click: sel_instance.end_time = time_end">Default</button>
                   <span class="help-block">{{time_end}}</span>
                 </div>
@@ -78,8 +78,8 @@
           </div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary" v-on="click: save_sched()" v-attr="disabled: !save_sched_err" data-dismiss="modal">Save</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal"><%= I18n.t('operation_scheduler.btn.cancel')%></button>
+        <button type="button" class="btn btn-primary" v-on="click: save_sched()" v-attr="disabled: !save_sched_err" data-dismiss="modal"><%= I18n.t('operation_scheduler.btn.save')%></button>
       </div>
     </div>
   </div>
