--- a/app/views/infrastructures/modal/_modal_manage_schedule.html.erb
+++ b/app/views/infrastructures/modal/_modal_manage_schedule.html.erb
@@ -64,8 +64,8 @@
           </div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal"><%= I18n.t('operation_scheduler.btn.cancel')%></button>
-        <button type="button" class="btn btn-primary" v-on="click: save_sched()" v-attr="disabled: !save_sched_err" data-dismiss="modal"><%= I18n.t('operation_scheduler.btn.save')%></button>
+        <button type="button" class="btn btn-default" data-dismiss="modal"><%= I18n.t('helpers.links.cancel')%></button>
+        <button type="button" class="btn btn-primary" v-on="click: save_sched()" v-attr="disabled: !save_sched_err" data-dismiss="modal"><%= I18n.t('helpers.titles.save')%></button>
       </div>
     </div>
   </div>
