--- a/app/views/serverspecs/generator.html.erb
+++ b/app/views/serverspecs/generator.html.erb
@@ -24,7 +24,7 @@
   <div class="row form-actions-top">
     <button class="btn btn-primary" v-on="click: save()"><%=t('helpers.titles.save')%></button>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-      serverspecs_path, class: 'btn-default btn' %>
+      serverspecs_path(infrastructure_id: @infra.try(:id)), class: 'btn-default btn' %>
   </div>
 </div>
 
