--- a/app/views/serverspecs/generator.html.erb
+++ b/app/views/serverspecs/generator.html.erb
@@ -1,5 +1,10 @@
 <div class="container" id="main" v-cloak>
-  <h2 class="page-header"><%=t('serverspecs.generator.title')%></h2>
+  <h2 class="page-header">
+    <%=t('serverspecs.generator.title')%>
+    <% if @infra %>
+      <small><%= ('for ' + link_to(@infra.stack_name, infrastructures_path(project_id: @infra.project_id, infrastructure_id: @infra.id))).html_safe %></small>
+    <% end %>
+  </h2>
 
   <div class="row">
     <div class="col-xs-6">
