added page title on pages

--- a/app/views/app_settings/show.html.erb
+++ b/app/views/app_settings/show.html.erb
@@ -1,3 +1,5 @@
+<!-- 一番上に追加 -->
+<% provide(:title, I18n.t("app_settings.title.setup")) %>
 <h1 class="page-header"><%= t 'app_settings.title.show' %></h1>
 
 <div class="panel panel-primary">
