--- a/app/views/app_settings/zabbix_server.html.erb
+++ b/app/views/app_settings/zabbix_server.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "Zabbix Server") %>
 <h1 class="page-header">Zabbix Server</h1>
 
 <%= form_tag update_zabbix_app_settings_path, class: "form-horizontal", method: :post do %>
