--- a/app/views/cf_templates/index.html.erb
+++ b/app/views/cf_templates/index.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, I18n.t('cf_templates.cf_template')) %>
 <%- model_class = CfTemplate -%>
 <% master_admin = current_user.master? && current_user.admin? %>
 <div class="page-header">
