--- a/app/views/infrastructures/index.html.erb
+++ b/app/views/infrastructures/index.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, I18n.t('infrastructures.infrastructure'))%>
 <%- model_class = Infrastructure -%>
 <div class="page-header">
   <h1><%=t 'infrastructures.infrastructure' %></h1>
