--- a/app/views/serverspecs/generator.html.erb
+++ b/app/views/serverspecs/generator.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, I18n.t('serverspecs.generator.title')) %>
 <div class="container" id="main" v-cloak>
   <h2 class="page-header">
     <%=t('serverspecs.generator.title')%>
