--- a/app/views/cf_templates/edit.html.erb
+++ b/app/views/cf_templates/edit.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, I18n.t('clients.client')+" | "+I18n.t('helpers.titles.edit') ) %>
 <div class="page-header">
   <h1>Edit CloudFormation Template</h1>
 </div>
