--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, I18n.t('clients.client')) %>
 <%- model_class = Client -%>
 <div class="page-header">
   <h1><%=t 'clients.client' %></h1>
