--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -1,3 +1,6 @@
+
+<% provide(:title, I18n.t('clients.client')+"|"+I18n.t('helpers.titles.new') ) %>
+
 <%- model_class = Client -%>
 <div class="page-header">
   <h1><%=t '.title', default: [:'helpers.titles.new', 'New %{model}'], model: model_class.model_name.human.titleize %></h1>
