--- a/app/views/dishes/new.html.erb
+++ b/app/views/dishes/new.html.erb
@@ -1,3 +1,5 @@
+<% provide(:title, I18n.t('dishes.dish')+" | "+I18n.t('helpers.titles.new') ) %>
+
 <%- model_class = Dish -%>
 <div class="page-header">
   <h1><%=t '.title', :default => [:'helpers.titles.new', 'New %{model}'], :model => model_class.model_name.human.titleize %></h1>
