--- a/app/views/infrastructures/edit.html.erb
+++ b/app/views/infrastructures/edit.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, I18n.t('infrastructures.infrastructure')+" | "+I18n.t('helpers.titles.edit')) %>
 <%- model_class = Infrastructure -%>
 <div class="page-header">
   <h1><%=t '.title', :default => [:'helpers.titles.edit', 'Edit %{model}'], :model => model_class.model_name.human.titleize %></h1>
