--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, I18n.t('projects.project')) %>
 <%- model_class = Project -%>
 <div class="page-header">
   <h1><%= t 'projects.project' %></h1>
