--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, I18n.t('projects.project')+" | "+I18n.t('helpers.titles.new')) %>
 <%- model_class = Project -%>
 <div class="page-header">
   <h1><%=t '.title', :default => [:'helpers.titles.new', 'New %{model}'], :model => model_class.model_name.human.titleize %></h1>
