--- a/app/views/serverspecs/index.html.erb
+++ b/app/views/serverspecs/index.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, I18n.t('serverspecs.serverspec')) %>
 <%- model_class = Serverspec -%>
 <% allow_change = @infrastructure_id ? current_user.admin? : current_user.master? && current_user.admin? %>
 <% project_id   = Infrastructure.find(@infrastructure_id).project_id if @infrastructure_id %>
