--- a/app/views/template_builder/new.html.erb
+++ b/app/views/template_builder/new.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, I18n.t('template_builder.template_builder')) %>
 <h1 class="page-header"><%= t 'template_builder.template_builder' %></h1>
 
 <div class="col-md-12 col-sm-12 form-horizontal">
