--- a/app/views/users_admin/new.html.erb
+++ b/app/views/users_admin/new.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, I18n.t('users.create_new_user')) %>
 <div class="page-header">
   <h1><%= t('users.create_new_user') %></h1>
 </div>
