--- a/app/views/serverspecs/_gen_resource.html.erb
+++ b/app/views/serverspecs/_gen_resource.html.erb
@@ -3,7 +3,7 @@
     <button class="btn btn-danger pull-right btn-xs" v-on="click: $parent.removeDescribe(idx)"><span class="glyphicon glyphicon-remove"></span></button>
     <text class="pull-right">&nbsp&nbsp</text>
     <button class="btn btn-default pull-right btn-xs" v-on="click: accordionToggle"><span class="glyphicon glyphicon-chevron-down"></span></button>
-    <h3 class="panel-title">{{desc.resourceType + "(" + desc.name + ")"}}</h3>
+    <h3 class="panel-title">{{title}}</h3>
   </div>
 
   <div class="panel-body collapse in">
