--- a/app/views/vue/_add_modify_tabpane.html.erb
+++ b/app/views/vue/_add_modify_tabpane.html.erb
@@ -26,24 +26,24 @@
 
   <div class="tab-content">
     <div class="tab-pane active" id="history-json-tab">
-      <select class="form-control" size="20" v-model="selected_cft_id" number v-on="dblclick: select_cft()">
-        <option v-repeat="t: templates.histories" value="{{t.id}}" v-text="t.name"></option>
+      <select class="form-control" size="20" v-model="selected_cft_id" number @dblclick="select_cft()">
+        <option v-for="t in templates.histories" value="{{t.id}}" v-text="t.name"></option>
       </select>
     </div>
     <div class="tab-pane" id="global-json-tab">
-      <select class="form-control" size="20" v-model="selected_cft_id" number v-on="dblclick: select_cft()">
-        <option v-repeat="t: templates.globals"   value="{{t.id}}" v-text="t.name"></option>
+      <select class="form-control" size="20" v-model="selected_cft_id" number @dblclick="select_cft()">
+        <option v-for="t in templates.globals"   value="{{t.id}}" v-text="t.name"></option>
       </select>
     </div>
   </div>
 
   <div class="form-actions-top">
-    <button class="btn btn-default" v-on="click: select_cft()"><%= glyphicon "chevron-left" %></button>
+    <button class="btn btn-default" @click="select_cft()"><%= glyphicon "chevron-left" %></button>
   </div>
 </div>
 
 <div class="form-actions-top col-md-12 col-sm-12">
-  <button class="btn btn-primary btn-sm" v-attr="disabled: jsonParseErr" v-on="click: submit()">
+  <button class="btn btn-primary btn-sm" :class="{disabled: jsonParseErr}" @click="submit()">
     <%= t 'cf_templates.insert_parameters' %>
   </button>
 </div>
