--- a/app/views/vue/_ec2_tabpane.html.erb
+++ b/app/views/vue/_ec2_tabpane.html.erb
@@ -24,9 +24,9 @@
             <span v-if="!ec2_status_changing">{{ec2.status}}</span>
           </td>
           <td>
-            <bootstrap-tooltip :title="<%= t('ec2_instances.change_status') %>">
+            <bootstrap-tooltip :title="change_status" inline-template>
               <div class="btn-group">
-                <button href="#" :class="{ec2_btn_class}" class="btn btn-xs dropdown-toggle" data-toggle="dropdown" :attr="{disabled: ec2_status_changing}">
+                <button href="#" :class="ec2_btn_class" class="btn btn-xs dropdown-toggle" data-toggle="dropdown" :attr="{disabled: ec2_status_changing}">
                   <span class="glyphicon glyphicon-off"></span>&nbsp;<span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu">
@@ -51,8 +51,8 @@
           <td>EBS</td>
           <td colspan="2">
             <span v-for="block_device in ec2.block_devices" class="dropdown">
-              <bootstrap-tooltip :title="block_device.device_name">
-                <a @click="volume_selected = block_device.ebs.volume_id" :class="{btn-primary: is_root_device(block_device.device_name)}" class="dropdown-toggle btn btn-xs btn-default" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+              <bootstrap-tooltip :title="block_device.device_name" inline-template>
+                <a @click="volume_selected = block_device.ebs.volume_id" :class="{'btn-primary': is_root_device(block_device.device_name)}" class="dropdown-toggle btn btn-xs btn-default" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                   {{block_device.ebs.volume_id}}
                   <span v-if="ec2.root_device_name === block_device.device_name" class="badge">Root</span>
                   <span class="caret"></span>
@@ -65,7 +65,7 @@
                 </ul>
               </bootstrap-tooltip>
             </span>
-            <bootstrap-tooltip :title="<%= t 'ec2_instances.attach' %>" class="dropdown" id="attachButton">
+            <bootstrap-tooltip :title="attach_vol" class="dropdown" id="attachButton" inline-template>
               <a @click="load_volumes()" class="btn btn-xs btn-link" data-toggle="dropdown"><span class="glyphicon glyphicon-plus"></span></a>
               <ul id="attachVolume" class="dropdown-menu">
 <!--                 <li><a href="#">Create Volume</a></li>
@@ -136,20 +136,20 @@
 
     <div class="col-xs-4 col-sm-12">
       <h6><%= t 'nodes.latest_cook_status' %></h6>
-      <bootstrap-tooltip title="{{* cook_time}}">
-        <span :class="{cook_status_class}" class="label">{{cook_status}}</span>
+      <bootstrap-tooltip :title.once="cook_time">
+        <span :class="cook_status_class" class="label">{{cook_status}}</span>
       </bootstrap-tooltip>
     </div>
     <div class="col-xs-4 col-sm-12">
       <h6><%= t 'nodes.latest_serverspec_status' %></h6>
-      <bootstrap-tooltip title="{{* serverspec_time}}">
-        <span :class="{serverspec_status_class}" class="label">{{serverspec_status}}</span>
+      <bootstrap-tooltip :title.once="serverspec_time">
+        <span :class="serverspec_status_class" class="label">{{serverspec_status}}</span>
       </bootstrap-tooltip>
     </div>
     <div class="col-xs-4 col-sm-12">
       <h6><%= t 'nodes.latest_update_status' %></h6>
-      <bootstrap-tooltip title="{{* update_time}}">
-        <span :class="{update_status_class}" class="label">{{update_status}}</span>
+      <bootstrap-tooltip :title.once="update_time">
+        <span :class="update_status_class" class="label">{{update_status}}</span>
       </bootstrap-tooltip>
     </div>
   </div>
