--- a/app/views/vue/_update_template_tabpane.html.erb
+++ b/app/views/vue/_update_template_tabpane.html.erb
@@ -13,7 +13,7 @@
   <h4 class="page-header"><%= t 'monitoring.linked_templates' %> <small>
     <a href="#" data-toggle="modal" data-target="#edit-templates" class="btn-link"><span class="glyphicon glyphicon-edit"></span><%= t 'monitoring.btn.edit' %></a></small>
   </h4>
-  <ul v-repeat="l: templates">
+  <ul v-for="l in templates">
     <li v-if="l.checked">{{l.name}}</li>
   </ul>
   <%= render 'monitorings/modal_update_templates' %>
