--- a/app/views/vue/_add_ec2_tabpane.html.erb
+++ b/app/views/vue/_add_ec2_tabpane.html.erb
@@ -17,6 +17,6 @@
 </form>
 
 <div class="form-actions-top">
-  <button v-if="!loading" v-on="click: submit()" class="btn btn-primary"><%= t 'common.btn.submit' %></button>
+  <button v-if="!loading" @click="submit()" class="btn btn-primary"><%= t 'common.btn.submit' %></button>
   <div-loader v-if="loading"></div-loader>
 </div>
