--- a/app/views/vue/_infra_logs_tabpane.html.erb
+++ b/app/views/vue/_infra_logs_tabpane.html.erb
@@ -7,10 +7,10 @@
       <th>at</th>
     </tr>
   </thead>
-  <tbody v-repeat="log: logs" class="tbody-infra-log">
+  <tbody v-for="log in logs" class="tbody-infra-log">
     <tr>
       <td><span v-if="log.admin" class="label label-info">admin</span>&nbsp;{{log.email}}</td>
-      <td><span v-class="status_class(log.status)" v-text="status_text(log.status)" class="label"></span></td>
+      <td><span :class="status_class(log.status)" v-text="status_text(log.status)" class="label"></span></td>
       <td>{{log.title}}<a v-if="log.long" href="#" data-toggle="collapse" data-target="#logbody-{{log.id}}" class="accordion-toggle btn btn-xs btn-link popovermore">...see all </a></td>
       <td v-text="toLocaleString(log.created_at)"></td>
     </tr>
@@ -24,4 +24,4 @@
   </tbody>
 </table>
 
-<vue-paginator page="{{page}}"></vue-paginator>
+<vue-paginator :page="page"></vue-paginator>
